made it easier to add buildings

--- a/melonClicker/melonCode/index.html
+++ b/melonClicker/melonCode/index.html
@@ -37,7 +37,7 @@
             <div class="building" id="building2">
                 <div id="buildingName">melon farm</div>
                 <div id="addedMelonsPerSec">+ 30 Melons/s</div>
-                <div id="farmPrice" class="price">price: 2.5k</div>
+                <div id="farmPrice" class="price">price: 2500</div>
                 <div id="farmCount" class="count">0</div>
                 <img src="Images/farm.png" id="picture">
             </div>
