started balancing and added melons/click increaser

--- a/melonClicker/melonCode/index.html
+++ b/melonClicker/melonCode/index.html
@@ -16,9 +16,16 @@
             <div class="melonAmount" id="melonAmount"></div>
             <div class="melonPerSec" id="melonPerSec"></div>
             <div class="melonSquare">
+                <div class="melonClickUpgrade" id="clickUpgrade">
+                    <div class="clickPrice" id="clickPrice">Increases melons/click</div>
+                    <div class="clickAmount" id="clickAmount">40</div>
+                    <div class="amountOfUpgrades" id="amountOfUpgrades">1 Melon / click</div>
+                </div>
+                <div class="buttonHolder">
                 <img src="Images/waterMelon.png" id="watermelonClick"></img>
                 <img src="Images/melonContainer.png" class="melonContainer">
                 <div class="melonHitbox" id="melonHitbox" onmousedown="mouseDown()" onmouseup="mouseUp()"></div>
+                </div>
             </div>
         </div>
         <div class="upgradeList">
@@ -29,44 +36,44 @@
         <div class="buildingContainer" id="buildingContainer">
             <div class="building" id="building1">
                 <div id="buildingName">melon plant</div>
-                <div id="addedMelonsPerSec">+ 2 Melons/s</div>
-                <div id="plantPrice" class="price">price: 200</div>
+                <div id="addedMelonsPerSec">+ 10</div>
+                <div id="plantPrice" class="price">price: 300</div>
                 <div id="plantCount" class="count">0</div>
                 <img src="Images/plant.png" id="picture">
             </div>
             <div class="building" id="building2">
                 <div id="buildingName">melon farm</div>
-                <div id="addedMelonsPerSec">+ 30 Melons/s</div>
-                <div id="farmPrice" class="price">price: 2500</div>
+                <div id="addedMelonsPerSec">+ 150</div>
+                <div id="farmPrice" class="price">price: 2000</div>
                 <div id="farmCount" class="count">0</div>
                 <img src="Images/farm.png" id="picture">
             </div>
             <div class="building" id="building3">
-                <div id="buildingName">melon plant</div>
-                <div id="addedMelonsPerSec">+ 2 Melons/s</div>
-                <div id="plantPrice" class="price">price: 30</div>
-                <div id="plantCount" class="count">20</div>
+                <div id="buildingName">melon factory</div>
+                <div id="addedMelonsPerSec">+ 1500</div>
+                <div id="factoryPrice" class="price">price: 15k</div>
+                <div id="factoryCount" class="count">0</div>
                 <img src="Images/farm.png" id="picture">
             </div>
             <div class="building" id="building4">
-                <div id="buildingName">melon plant</div>
-                <div id="addedMelonsPerSec">+ 2 Melons/s</div>
-                <div id="plantPrice" class="price">price: 30</div>
-                <div id="plantCount" class="count">20</div>
+                <div id="buildingName">melon temple</div>
+                <div id="addedMelonsPerSec">+ 14000</div>
+                <div id="templePrice" class="price">price: 250k</div>
+                <div id="templeCount" class="count">0</div>
                 <img src="Images/farm.png" id="picture">
             </div>
             <div class="building" id="building5">
-                <div id="buildingName">melon plant</div>
-                <div id="addedMelonsPerSec">+ 2 Melons/s</div>
-                <div id="plantPrice" class="price">price: 30</div>
-                <div id="plantCount" class="count">20</div>
+                <div id="buildingName">Melonia</div>
+                <div id="addedMelonsPerSec">+ 1000</div>
+                <div id="countryPrice" class="price">price: 1000</div>
+                <div id="countryCount" class="count">0</div>
                 <img src="Images/" id="picture">
             </div>
             <div class="building" id="building6">
-                <div id="buildingName">melon plant</div>
-                <div id="addedMelonsPerSec">+ 2 Melons/s</div>
-                <div id="plantPrice" class="price">price: 30</div>
-                <div id="plantCount" class="count">20</div>
+                <div id="buildingName">melon planet</div>
+                <div id="addedMelonsPerSec">+ 1000</div>
+                <div id="planetPrice" class="price">price: 1000</div>
+                <div id="planetCount" class="count">0</div>
                 <img src="Images/farm.png" id="picture">
             </div>
         </div>
